# webserv

./: .gitignore  Cargo.toml  Makefile  client.cpp
config/: default.json
includes/: CServer.hpp  Socket.hpp  config.hpp
src/: main.rs
src/types/: config.rs
srcs/: Socket.cpp  main.cpp  server.cpp
srcs/socket/: Socket.cpp
