[package]
name = "webserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
